LoyaltyApp/force-app/main/default/objects/Loyalty_Value__c/Loyalty_Value__c.object-meta.xml
<CustomObject>
    <label>Loyalty Value</label>
    <nameField>
        <label>Loyalty Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>