LoyaltyApp/force-app/main/default/objects/Loyalty_Value__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>Expiration_Date__c &gt;=  TODAY()  &amp;&amp;  Is_Points_Used__c  = false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>