LoyaltyApp/force-app/main/default/objects/Loyalty_Value__c/fields/Customer_Points__c.field-meta.xml
<CustomField>
    <fullName>Customer_Points__c</fullName>
    <label>Customer Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>