LoyaltyApp/force-app/main/default/objects/Loyalty_Value__c/fields/Customer_Spend_Points__c.field-meta.xml
<CustomField>
    <fullName>Customer_Spend_Points__c</fullName>
    <description>Used for the spend program. It&apos;s a cumulative value related to the total money spent by the customer</description>
    <label>Customer Spend Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>