LoyaltyApp/force-app/main/default/objects/Loyalty_Value__c/fields/Is_Points_Used__c.field-meta.xml
<CustomField>
    <fullName>Is_Points_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Points Used</label>
    <type>Checkbox</type>
</CustomField>