LoyaltyApp/force-app/main/default/objects/Loyalty_Value__c/fields/Loyalty_Brand_Value__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Brand_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Brand Value</label>
    <referenceTo>Loyalty_Brand__c</referenceTo>
    <relationshipLabel>Loyalty Values</relationshipLabel>
    <relationshipName>Loyalty_Values</relationshipName>
    <type>Lookup</type>
</CustomField>