LoyaltyApp/force-app/main/default/objects/Loyalty_Value__c/fields/Loyalty_Business_Group__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Business Group</label>
    <referenceTo>Loyalty_Business_Group__c</referenceTo>
    <relationshipLabel>Loyalty Values</relationshipLabel>
    <relationshipName>Loyalty_Values</relationshipName>
    <type>Lookup</type>
</CustomField>