LoyaltyApp/force-app/main/default/objects/Loyalty_Value__c/fields/Program_Member__c.field-meta.xml
<CustomField>
    <fullName>Program_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Member</label>
    <referenceTo>Loyalty_Program_Member__c</referenceTo>
    <relationshipLabel>Loyalty Values</relationshipLabel>
    <relationshipName>Loyalty_Values</relationshipName>
    <type>Lookup</type>
</CustomField>